// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Row and Column Component correctly 1`] = `
<div>
  <div
    className="sc-bdVaJa gYKXhc"
  >
    <div>
      test
    </div>
  </div>
  <div
    className="sc-bdVaJa gYKXhc"
  >
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`renders the Row and Column Component correctly 2`] = `
<div>
  <div
    className="sc-bdVaJa flKYCL"
  >
    <div>
      test
    </div>
  </div>
  <div
    className="sc-bdVaJa flKYCL"
  >
    <div>
      test
    </div>
  </div>
</div>
`;
